# flux-coral2

./: .clang-format  .git-blame-ignore-revs  .gitignore  .mergify.yml  .pre-commit-config.yaml  .readthedocs.yaml  .typos.toml  ChangeLog  Makefile.am  NEWS.md  README  README.md  codecov.yml  configure.ac
.github/workflows/: main.yml
config/: ax_flux_core.m4  tap-driver.sh  x_ac_expand_install_dirs.m4
debian/: control  copyright  rules
doc/: Makefile.am  conf.py  index.rst  manpages.py
doc/guide/: admin.rst  dws.rst  glossary.rst  rabbit.rst  rabbit_config.rst  reference.rst  slingshot.rst
doc/man1/: flux-coral2-chassis.rst  flux-dws2jgf.rst  flux-getrabbit.rst  flux-jobtap-dws.rst  flux-rabbitmapping.rst  flux-shell-cray-pals.rst  flux-shell-cray-slingshot.rst  flux-slingshot.rst  index.rst
doc/man5/: flux-config-rabbit.rst  flux-config-slingshot.rst  index.rst
doc/test/: spell.en.pws  spellcheck
etc/: 01-coral2-rc  01-rabbit-rc  Makefile.am  flux-coral2-dws.service.in  slingshot-cxi-alloc.sh  slingshot-cxi-cleanup.sh  slingshot-cxi-free.sh  start_nnf_clientmount.sh  zstop_nnf_clientmount.sh
etc/cli/plugins/: chassis.py
etc/modprobe/rc1.d/: coral2.py
k8s/: NearNodeFlash.yaml  Storage.yaml  Workflow.yaml  flux-test-storage0.yaml  flux-test-storage1.yaml  flux-test-storage2.yaml  flux-test-storage3.yaml  flux-test-storage4.yaml  nnf-x01c1.yaml  nnf-x01c2.yaml  nnf-x01c3.yaml  nnf-x01c4.yaml  nnf-x01c5.yaml  nnf-x01c6.yaml  nnf-x01c7.yaml  nnf-x01c8.yaml  nnf-x02c1.yaml  nnf-x02c2.yaml  nnf-x02c3.yaml  nnf-x02c4.yaml  nnf-x02c5.yaml  nnf-x02c6.yaml  nnf-x02c7.yaml  nnf-x02c8.yaml  nnf-x03c1.yaml  nnf-x03c2.yaml  nnf-x03c3.yaml  nnf-x03c4.yaml  nnf-x03c5.yaml  nnf-x03c6.yaml  nnf-x03c7.yaml  nnf-x03c8.yaml
kind/: kind-config.yaml
scripts/: build-libcxi.sh  debbuild.sh  install-libcxi-deps-deb.sh  install-libcxi.sh  requirements-dev.txt
src/: Makefile.am
src/cmd/: Makefile.am  flux-dws2jgf.py  flux-getrabbit.py  flux-hop.py  flux-rabbitmapping.py  flux-slingshot.c
src/common/: Makefile.am
src/common/libapinfo/: Makefile.am  apimpl.h  apinfo.c  apinfo.h  apinfo1.c  apinfo1.h  apinfo5.c  apinfo5.h
src/common/libapinfo/test/: apinfo.c  pals.c
src/common/libccan/: Makefile.am
src/common/libutil/: Makefile.am  errprintf.h  eventlog.c  eventlog.h
src/job-manager/plugins/: Makefile.am  cray-pmi-bootstrap.c  cray-slingshot.c  cray_pals_port_distributor.c  dws-jobtap.c  vnipool.c  vnipool.h
src/modules/: Makefile.am  coral2_dws.py  dws.py  flux_operator.py
src/python/: Makefile.am
src/python/flux/job/frobnicator/plugins/: Makefile.am  rabbit.py
src/python/flux_k8s/: Makefile.am  cleanup.py  crd.py  directivebreakdown.py  storage.py  systemstatus.py  watch.py  workflow.py
src/python/flux_k8s/operator/: __init__.py  defaults.py  minicluster.py  rabbits.py  volumes.py
src/shell/: Makefile.am
src/shell/plugins/: Makefile.am  cray-slingshot.c  cray_pals.c  dws_environment.c  eventlog_helpers.c  eventlog_helpers.h
src/test/: checks_run.sh  generate-matrix.py
src/test/docker/: docker-run-checks.sh
src/test/docker/centos8/: Dockerfile  kubectl.sh
src/test/docker/el8/: Dockerfile
src/test/docker/el9/: Dockerfile  sync-kube-config.sh
src/test/docker/focal/: Dockerfile  kubectl.sh  sync-kube-config.sh
src/test/docker/noble/: Dockerfile
t/: .gitignore  Makefile.am  t1000-dws-dependencies.t  t1001-cray-pals.t  t1002-dws-workflow-obj.t  t1003-dws-nnf-watch.t  t1004-dws-environment.t  t1005-chassis-cli-plugin.t  t2000-dws2jgf.t  t2001-getrabbit.t  t2002-dws2jgf2.t  t2003-rabbitmapping.t  t3000-slingshot-jobtap.t  t3001-slingshot-shell.t  t3002-slingshot-cmd.t
t/data/breakdown/: bad_kind.yaml  bad_label.yaml  lustre10gb_count2.yaml  lustre10tb.yaml  lustre10tb_daemon.yaml  xfs10gb.yaml  xfs10mb.yaml
t/data/dws2jgf/: R-properties  expected-compute-01-04.jgf  expected-compute-01-nodws.jgf  expected-compute-01.jgf  expected-configfile.jgf  expected-properties.jgf  expected.jgf  rabbit-jobspec.json  rabbits.json
t/data/dws2jgf2/: rabbitmapping.json  resource.toml
t/data/getrabbit/: rzadams_rabbitmapping  tuolumne_rabbitmapping
t/data/nnf-watch/: down.yaml  rabbit-jobspec.json  up.yaml
t/data/rabbitmapping/: rabbits-basic.json
t/data/workflow-obj/: two_directives.json
t/data/workflow-obj/maximums/: rabbit.toml
t/dws-dependencies/: coral2_dws.py  dep-validate.py  dws.py
t/python/: t0001-directive-breakdown.py  t0002-storage.py  t0003-coral2-dws.py  t0004-crd.py  t0005-rabbit-frobnicator.py
t/python/pycotap/: __init__.py
t/rc/: rc1-job
t/scripts/: apinfo_checker.py  coral2_inspection.py  set_status.py
t/sharness.d/: 01-setup.sh  02-flux-sharness.sh  03-kube-home.sh  03-kube.sh  04-fluxion.sh
t/util/: rpc.c
