.NOTPARALLEL:

SUBDIRS = . test

MAN_FILES = $(MAN1_FILES) $(MAN5_FILES)

MAN1_FILES = $(MAN1_FILES_PRIMARY)

MAN1_FILES_PRIMARY = \
	man1/flux-shell-cray-pals.1 \
	man1/flux-shell-cray-slingshot.1 \
	man1/flux-slingshot.1 \
	man1/flux-rabbitmapping.1 \
	man1/flux-getrabbit.1 \
	man1/flux-dws2jgf.1 \
	man1/flux-jobtap-dws.1

MAN5_FILES = $(MAN5_FILES_PRIMARY)

MAN5_FILES_PRIMARY = \
	man5/flux-config-slingshot.5 \
	man5/flux-config-rabbit.5

RST_FILES  = \
	$(MAN1_FILES_PRIMARY:.1=.rst) \
	$(MAN5_FILES_PRIMARY:.5=.rst)

if ENABLE_DOCS
man_MANS = \
	$(MAN1_FILES) \
	$(MAN5_FILES)
endif

SUFFIXES = .rst .1 .5

sphinx_man = $(sphinx_man_$(V))
sphinx_man_ = $(sphinx_man_$(AM_DEFAULT_VERBOSITY))
sphinx_man_0 = @echo "  BUILD     manpages";

sphinx_html = $(sphinx_html_$(V))
sphinx_html_ = $(sphinx_html_$(AM_DEFAULT_VERBOSITY))
sphinx_html_0 = @echo "  BUILD     html";

sphinx_verbose_flags = $(sphinx_verbose_flags_$(V))
sphinx_verbose_flags_ = $(sphinx_verbose_flags_$(AM_DEFAULT_VERBOSITY))
sphinx_verbose_flags_0 =
sphinx_verbose_flags_1 = -v
sphinx_verbose_flags_2 = -vv

STDERR_DEVNULL = $(stderr_devnull_$(V))
stderr_devnull_ =  $(stderr_devnull_$(AM_DEFAULT_VERBOSITY))
stderr_devnull_0 = >/dev/null 2>&1

$(MAN_FILES): manpages.py conf.py $(RST_FILES)
	$(sphinx_man) \
	SPHINX_BUILDDIR=$(abs_builddir) $(PYTHON) \
		-m sphinx $(sphinx_verbose_flags) -b man $(srcdir) ./man \
		$(STDERR_DEVNULL)
	@echo "  MV        manpages"; \
	for sec in 1 5; do \
	  $(MKDIR_P) man$$sec && \
	  mv -f $(abs_builddir)/man/*.$$sec man$$sec/; \
	done

.PHONY: html
html: conf.py $(RST_FILES)
	$(sphinx_html) \
	SPHINX_BUILDDIR=$(abs_builddir) $(PYTHON) \
		-m sphinx $(sphinx_verbose_flags) -b html $(srcdir) ./html \
		$(STDERR_DEVNULL)

EXTRA_DIST = \
	conf.py \
	manpages.py \
	index.rst \
	domainrefs.py \
	requirements.txt \
	guide/glossary.rst \
	guide/admin.rst \
	guide/images/dragonfly.png \
	guide/slingshot.rst \
	guide/rabbit.rst \
	$(RST_FILES) \
	man1/index.rst \
	man5/index.rst

CLEANFILES = \
	$(MAN_FILES)

clean-local:
	-rm -rf man python/autogenerated

distclean-local:
	-rm -rf doctrees

AM_LDFLAGS = \
	$(CODE_COVERAGE_LIBS) \
	-no-install

AM_CPPFLAGS = \
	-I$(top_srcdir) \
	-I$(top_srcdir)/src/include \
	-I$(top_builddir)/src/common/libflux
